--- a/koi_be/package.json
+++ b/koi_be/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@keystone-6/auth": "^8.0.0",
+    "@keystone-6/cloudinary": "^8.0.0",
     "@keystone-6/core": "^6.0.0",
     "@keystone-6/fields-document": "^9.0.0",
     "typescript": "^5.5.0"
