--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
+    "graphql": "^16.9.0",
+    "react": "^17.0.0",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
+    "react-dom": "^17.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2"
   },
