--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "antd": "^5.21.2",
     "bootstrap": "^5.3.3",
     "graphql": "^16.9.0",
     "react": "^17.0.0",
