--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^17.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2"
   },
