Add logic checkout

--- a/koi_be/package.json
+++ b/koi_be/package.json
@@ -9,6 +9,7 @@
     "seed": "tsx ./seed-data/index.ts"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.6",
     "@keystone-6/auth": "^8.0.0",
     "@keystone-6/cloudinary": "^8.0.0",
     "@keystone-6/core": "^6.0.0",
