--- a/koi_be/package.json
+++ b/koi_be/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.3",
   "private": true,
   "scripts": {
+    "dev-debug": "cross-env NODE_OPTIONS=--inspect DISABLE_LOGGING=true keystone dev",
     "dev": "keystone dev",
     "start": "keystone start",
     "build": "keystone build",
@@ -14,6 +15,7 @@
     "@keystone-6/cloudinary": "^8.0.0",
     "@keystone-6/core": "^6.0.0",
     "@keystone-6/fields-document": "^9.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "tsx": "^4.15.1",
     "typescript": "^5.4.5"
