--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "antd": "^5.21.2",
+    "apollo-upload-client": "^18.0.1",
     "bootstrap": "^5.3.3",
     "graphql": "^16.9.0",
     "react": "^17.0.0",
