--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^17.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
