--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "bootstrap": "^5.3.3",
