--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "stripe": "^17.2.1",
     "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
