--- a/koi_be/package.json
+++ b/koi_be/package.json
@@ -17,7 +17,11 @@
     "@keystone-6/fields-document": "^9.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.16",
     "tsx": "^4.15.1",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.16"
   }
 }
