--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -21,6 +21,7 @@
     "apollo-upload-client": "^18.0.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "cross-env": "^7.0.3",
     "graphql": "^16.9.0",
     "react": "^17.0.0",
     "react-bootstrap": "^2.10.5",
