--- a/koi_fe/package.json
+++ b/koi_fe/package.json
@@ -16,7 +16,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
-    "@mui/material": "^6.1.1",
+    "@mui/material": "^6.1.7",
+    "@mui/x-charts": "^7.22.2",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
     "antd": "^5.21.2",
